crates/typestate-pipeline/tests/ui/stable/transitions_without_pipelined_impl.stderr
error[E0277]: the trait bound `Author<'a, A>: Pipelined<'a>` is not satisfied
 --> tests/ui/stable/transitions_without_pipelined_impl.rs:9:1
  |
9 | #[transitions]
  | ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Pipelined<'a>` is not implemented for `Author<'a, A>`
 --> tests/ui/stable/transitions_without_pipelined_impl.rs:3:1
  |
3 | struct Author<'a, S, M = Resolved>(Pipeline<'a, (), (), S, (), M>)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `transitions` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Author<'a, A, InFlight>: Pipelined<'a>` is not satisfied
 --> tests/ui/stable/transitions_without_pipelined_impl.rs:9:1
  |
9 | #[transitions]
  | ^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `Pipelined<'a>` is not implemented for `Author<'a, A, InFlight>`
 --> tests/ui/stable/transitions_without_pipelined_impl.rs:3:1
  |
3 | struct Author<'a, S, M = Resolved>(Pipeline<'a, (), (), S, (), M>)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `transitions` (in Nightly builds, run with -Z macro-backtrace for more info)
